dec 26 results update

--- a/bowl_pool/2025-2026/picks.html
+++ b/bowl_pool/2025-2026/picks.html
@@ -1526,36 +1526,36 @@ ul.auto-toc {
 </tr>
 <tr><td>34</td>
 <td>CFP Quarterfinal (Sugar)</td>
-<td>Georga</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
 <td>0.0</td>
-<td>Georga</td>
-<td>Georga</td>
-<td>Georga</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
-<td>Georga</td>
+<td>Georgia</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
-<td>Georga</td>
+<td>Georgia</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
-<td>Georga</td>
+<td>Georgia</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
-<td>Georga</td>
-<td>Georga</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
 <td>Ole Miss or Tulane</td>
 <td>Ole Miss or Tulane</td>
-<td>Georga</td>
-<td>Georga</td>
-<td>Georga</td>
-<td>Georga</td>
-<td>Georga</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Georgia</td>
 </tr>
 <tr><td>35</td>
 <td>ARMED FORCES BOWL</td>
