--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -798,6 +798,105 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>12</td>
+<td>GAMEABOVE SPORTS BOWL</td>
+<td>Northwestern</td>
+<td>Central Michigan</td>
+<td>10.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+</tr>
+<tr><td>13</td>
+<td>RATE BOWL</td>
+<td>Minnesota</td>
+<td>New Mexico</td>
+<td>2.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>14</td>
+<td>FIRST RESPONDER BOWL</td>
+<td>UTSA</td>
+<td>Florida International</td>
+<td>8.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -902,33 +1001,33 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>12.25</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>4.0</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>15.25</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>7.25</strong></td>
 <td><strong>10.25</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>12.25</strong></td>
+<td><strong>8.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>11.25</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>11.5</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>18.25</strong></td>
 <td><strong>9.25</strong></td>
+<td><strong>16.5</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>11.5</strong></td>
+<td><strong>13.5</strong></td>
 <td><strong>11.25</strong></td>
 <td><strong>14.25</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>17.25</strong></td>
+<td><strong>12.0</strong></td>
 </tr>
 </tbody>
 </table>
