--- a/bowl_pool/test/2025-2026/rankings.html
+++ b/bowl_pool/test/2025-2026/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-24 13:38:16</em></div>
-<div class="line"><em>Last bowl scored:  SCOOTER'S COFFEE FRISCO BOWL (UNLV vs. Ohio (Bobcats))</em></div>
+<div class="line"><em>Last updated:  2025-12-27 09:04:57</em></div>
+<div class="line"><em>Last bowl scored:  FIRST RESPONDER BOWL (UTSA vs. Florida International)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Bearly Watching 15.25</strong></div>
-<div class="line">2. <strong>Vibe-free since '73 14.75</strong></div>
-<div class="line">3. <strong>Sherrone Moore's Bad Day 14.25</strong></div>
-<div class="line">3. We Pay Players 14.25</div>
-<div class="line">5. Battered Austin Syndrome 13.5</div>
-<div class="line">6. Mama Dawg 12.75</div>
-<div class="line">7. Down 12.5</div>
-<div class="line">8. Barkside Ballers 12.25</div>
-<div class="line">8. Dazed and Confoosballed 12.25</div>
-<div class="line">8. Eclipse 12.25</div>
-<div class="line">8. First Round SIL 12.25</div>
-<div class="line">12. #MamaBear 12.0</div>
-<div class="line">13. Wisconsin shoud've been here 10.75</div>
-<div class="line">14. Just Call Me Dr. 10.5</div>
-<div class="line">15. Sierra LeCat Dowdle 10.25</div>
-<div class="line">15. Upside 10.25</div>
-<div class="line">17. bugaroo 10.0</div>
-<div class="line">18. BlueOrRed 9.5</div>
-<div class="line">19. Sascha Picks Dogs 9.25</div>
-<div class="line">19. NoNND-Bo 2 9.25</div>
-<div class="line">19. Not So New Guy 9.25</div>
-<div class="line">22. Momma Longhorn 8.25</div>
-<div class="line">22. Call Me An Optimist 8.25</div>
-<div class="line">24. Game of Throws 8.0</div>
-<div class="line">25. NoNND-Bo 1 7.25</div>
-<div class="line">26. Arandas legacy Year 7.0</div>
-<div class="line">27. The New Mendoza Line 4.0</div>
+<div class="line">1. <strong>Vibe-free since '73 18.75</strong></div>
+<div class="line">2. <strong>Bearly Watching 18.25</strong></div>
+<div class="line">3. <strong>Battered Austin Syndrome 17.5</strong></div>
+<div class="line">4. Eclipse 17.25</div>
+<div class="line">4. We Pay Players 17.25</div>
+<div class="line">6. Mama Dawg 16.75</div>
+<div class="line">7. Down 16.5</div>
+<div class="line">8. Dazed and Confoosballed 15.25</div>
+<div class="line">8. <strong>Sherrone Moore's Bad Day 15.25</strong></div>
+<div class="line">10. #MamaBear 15.0</div>
+<div class="line">11. Barkside Ballers 14.25</div>
+<div class="line">11. Upside 14.25</div>
+<div class="line">13. Wisconsin shoud've been here 13.75</div>
+<div class="line">14. Just Call Me Dr. 13.5</div>
+<div class="line">15. First Round SIL 13.25</div>
+<div class="line">16. bugaroo 13.0</div>
+<div class="line">17. Sierra LeCat Dowdle 12.25</div>
+<div class="line">18. Game of Throws 12.0</div>
+<div class="line">19. BlueOrRed 11.5</div>
+<div class="line">20. Momma Longhorn 11.25</div>
+<div class="line">20. Not So New Guy 11.25</div>
+<div class="line">22. Arandas legacy Year 11.0</div>
+<div class="line">23. Sascha Picks Dogs 10.25</div>
+<div class="line">23. NoNND-Bo 1 10.25</div>
+<div class="line">23. NoNND-Bo 2 10.25</div>
+<div class="line">26. Call Me An Optimist 9.25</div>
+<div class="line">27. <strong>The New Mendoza Line 8.0</strong></div>
 </div>
 </div>
 </body>
