--- a/bowl_pool/2025-2026/picks.html
+++ b/bowl_pool/2025-2026/picks.html
@@ -456,7 +456,7 @@ ul.auto-toc {
 <td>Kennesaw State</td>
 <td>Kennesaw State</td>
 <td>Western Michigan</td>
-<td>Kennesaw State<sup>*</sup></td>
+<td>Kennesaw State</td>
 <td>Kennesaw State</td>
 <td>Western Michigan</td>
 <td>Western Michigan</td>
@@ -478,7 +478,7 @@ ul.auto-toc {
 <td>NC State</td>
 <td>Memphis</td>
 <td>Memphis</td>
-<td>NC State<sup>*</sup></td>
+<td>NC State</td>
 <td>Memphis</td>
 <td>NC State</td>
 <td>NC State</td>
@@ -657,14 +657,14 @@ ul.auto-toc {
 <td>Washington State</td>
 <td>Utah State</td>
 <td>Washington State</td>
-<td>Washington State<sup>*</sup></td>
+<td>Washington State</td>
 <td>Utah State</td>
 <td>Utah State</td>
 <td>Utah State</td>
 <td>Washington State</td>
-<td>Washington State<sup>*</sup></td>
 <td>Washington State</td>
-<td>Utah State<sup>*</sup></td>
+<td>Washington State</td>
+<td>Utah State</td>
 </tr>
 <tr><td>8</td>
 <td>BUSH'S BOCA RATON BOWL</td>
@@ -672,31 +672,31 @@ ul.auto-toc {
 <td>Toledo</td>
 <td>8.5</td>
 <td>Louisville</td>
-<td>Louisville<sup>*</sup></td>
-<td>Louisville<sup>*</sup></td>
-<td>Toledo</td>
-<td>Louisville</td>
-<td>Toledo</td>
 <td>Louisville</td>
 <td>Louisville</td>
 <td>Toledo</td>
 <td>Louisville</td>
-<td>Louisville</td>
-<td>Louisville</td>
-<td>Louisville</td>
 <td>Toledo</td>
-<td>Louisville<sup>*</sup></td>
+<td>Louisville</td>
 <td>Louisville</td>
 <td>Toledo</td>
 <td>Louisville</td>
 <td>Louisville</td>
 <td>Louisville</td>
-<td>Louisville<sup>*</sup></td>
+<td>Louisville</td>
+<td>Toledo</td>
+<td>Louisville</td>
+<td>Louisville</td>
+<td>Toledo</td>
 <td>Louisville</td>
 <td>Louisville</td>
 <td>Louisville</td>
 <td>Louisville</td>
-<td>Louisville<sup>*</sup></td>
+<td>Louisville</td>
+<td>Louisville</td>
+<td>Louisville</td>
+<td>Louisville</td>
+<td>Louisville</td>
 <td>Louisville</td>
 </tr>
 <tr><td>9</td>
@@ -806,29 +806,29 @@ ul.auto-toc {
 <td>Northwestern</td>
 <td>Northwestern</td>
 <td>Northwestern</td>
-<td>Central Michigan<sup>*</sup></td>
-<td>Northwestern<sup>*</sup></td>
 <td>Central Michigan</td>
-<td>Northwestern<sup>*</sup></td>
-<td>Northwestern<sup>*</sup></td>
-<td>Central Michigan<sup>*</sup></td>
-<td>Northwestern</td>
-<td>Northwestern</td>
-<td>Northwestern</td>
 <td>Northwestern</td>
 <td>Central Michigan</td>
 <td>Northwestern</td>
 <td>Northwestern</td>
 <td>Central Michigan</td>
-<td>Northwestern<sup>*</sup></td>
-<td>Northwestern<sup>*</sup></td>
+<td>Northwestern</td>
+<td>Northwestern</td>
+<td>Northwestern</td>
+<td>Northwestern</td>
+<td>Central Michigan</td>
+<td>Northwestern</td>
+<td>Northwestern</td>
+<td>Central Michigan</td>
+<td>Northwestern</td>
+<td>Northwestern</td>
 <td>Central Michigan</td>
 <td>Northwestern</td>
 <td>Northwestern</td>
 <td>Northwestern</td>
 <td>Central Michigan</td>
 <td>Northwestern</td>
-<td>Northwestern<sup>*</sup></td>
+<td>Northwestern</td>
 <td>Northwestern</td>
 </tr>
 <tr><td>13</td>
@@ -879,15 +879,6 @@ ul.auto-toc {
 <td>UTSA</td>
 <td>Florida International</td>
 <td>UTSA</td>
-<td>UTSA<sup>*</sup></td>
-<td>UTSA</td>
-<td>UTSA</td>
-<td>Florida International</td>
-<td>UTSA</td>
-<td>UTSA</td>
-<td>Florida International</td>
-<td>UTSA<sup>*</sup></td>
-<td>UTSA<sup>*</sup></td>
 <td>UTSA</td>
 <td>UTSA</td>
 <td>UTSA</td>
@@ -895,7 +886,16 @@ ul.auto-toc {
 <td>UTSA</td>
 <td>UTSA</td>
 <td>Florida International</td>
-<td>UTSA<sup>*</sup></td>
+<td>UTSA</td>
+<td>UTSA</td>
+<td>UTSA</td>
+<td>UTSA</td>
+<td>UTSA</td>
+<td>Florida International</td>
+<td>UTSA</td>
+<td>UTSA</td>
+<td>Florida International</td>
+<td>UTSA</td>
 </tr>
 <tr><td>15</td>
 <td>MILITARY BOWL</td>
@@ -973,7 +973,7 @@ ul.auto-toc {
 <td>Army</td>
 <td>Uconn</td>
 <td>Uconn</td>
-<td>Army<sup>*</sup></td>
+<td>Army</td>
 <td>Uconn</td>
 <td>Uconn</td>
 <td>Uconn</td>
@@ -1001,7 +1001,7 @@ ul.auto-toc {
 <td>Fresno State</td>
 <td>Miami (OH)</td>
 <td>3.5</td>
-<td>Fresno State<sup>*</sup></td>
+<td>Fresno State</td>
 <td>Fresno State</td>
 <td>Fresno State</td>
 <td>Miami (OH)</td>
@@ -1044,17 +1044,17 @@ ul.auto-toc {
 <td>Georgia Tech</td>
 <td>Georgia Tech</td>
 <td>Georgia Tech</td>
-<td>BYU<sup>*</sup></td>
-<td>Georgia Tech</td>
 <td>BYU</td>
 <td>Georgia Tech</td>
 <td>BYU</td>
-<td>Georgia Tech<sup>*</sup></td>
+<td>Georgia Tech</td>
+<td>BYU</td>
+<td>Georgia Tech</td>
 <td>Georgia Tech</td>
 <td>BYU</td>
 <td>BYU</td>
 <td>Georgia Tech</td>
-<td>BYU<sup>*</sup></td>
+<td>BYU</td>
 <td>BYU</td>
 <td>BYU</td>
 <td>BYU</td>
@@ -1067,17 +1067,17 @@ ul.auto-toc {
 <td>North Texas</td>
 <td>San Diego State</td>
 <td>3.5</td>
-<td>North Texas<sup>*</sup></td>
 <td>North Texas</td>
-<td>North Texas</td>
-<td>San Diego State</td>
-<td>North Texas</td>
-<td>San Diego State</td>
 <td>North Texas</td>
 <td>North Texas</td>
 <td>San Diego State</td>
 <td>North Texas</td>
-<td>North Texas<sup>*</sup></td>
+<td>San Diego State</td>
+<td>North Texas</td>
+<td>North Texas</td>
+<td>San Diego State</td>
+<td>North Texas</td>
+<td>North Texas</td>
 <td>North Texas</td>
 <td>North Texas</td>
 <td>San Diego State</td>
@@ -1111,9 +1111,9 @@ ul.auto-toc {
 <td>Virginia</td>
 <td>Virginia</td>
 <td>Virginia</td>
-<td>Missouri<sup>*</sup></td>
-<td>Missouri<sup>*</sup></td>
-<td>Virginia<sup>*</sup></td>
+<td>Missouri</td>
+<td>Missouri</td>
+<td>Virginia</td>
 <td>Virginia</td>
 <td>Missouri</td>
 <td>Virginia</td>
@@ -1121,10 +1121,10 @@ ul.auto-toc {
 <td>Missouri</td>
 <td>Missouri</td>
 <td>Missouri</td>
-<td>Virginia<sup>*</sup></td>
+<td>Virginia</td>
 <td>Missouri</td>
 <td>Missouri</td>
-<td>Missouri<sup>*</sup></td>
+<td>Missouri</td>
 <td>Missouri</td>
 <td>Missouri</td>
 </tr>
@@ -1144,17 +1144,17 @@ ul.auto-toc {
 <td>Houston</td>
 <td>LSU</td>
 <td>Houston</td>
-<td>Houston<sup>*</sup></td>
-<td>Houston<sup>*</sup></td>
-<td>LSU<sup>*</sup></td>
-<td>Houston<sup>*</sup></td>
+<td>Houston</td>
+<td>Houston</td>
 <td>LSU</td>
-<td>LSU<sup>*</sup></td>
 <td>Houston</td>
 <td>LSU</td>
 <td>LSU</td>
 <td>Houston</td>
-<td>LSU<sup>*</sup></td>
+<td>LSU</td>
+<td>LSU</td>
+<td>Houston</td>
+<td>LSU</td>
 <td>Houston</td>
 <td>Houston</td>
 <td>LSU</td>
@@ -1251,7 +1251,7 @@ ul.auto-toc {
 <td>Illiniois</td>
 <td>Tennessee</td>
 <td>Tennessee</td>
-<td>Tennessee<sup>*</sup></td>
+<td>Tennessee</td>
 <td>Tennessee</td>
 <td>Tennessee</td>
 <td>Tennessee</td>
@@ -1276,19 +1276,19 @@ ul.auto-toc {
 <td>TCU</td>
 <td>TCU</td>
 <td>TCU</td>
-<td>USC<sup>*</sup></td>
-<td>USC<sup>*</sup></td>
-<td>TCU<sup>*</sup></td>
+<td>USC</td>
+<td>USC</td>
 <td>TCU</td>
-<td>USC<sup>*</sup></td>
+<td>TCU</td>
+<td>USC</td>
 <td>TCU</td>
 <td>USC</td>
 <td>USC</td>
-<td>USC<sup>*</sup></td>
+<td>USC</td>
 <td>USC</td>
 <td>TCU</td>
 <td>TCU</td>
-<td>USC<sup>*</sup></td>
+<td>USC</td>
 <td>USC</td>
 <td>TCU</td>
 <td>USC</td>
@@ -1301,17 +1301,9 @@ ul.auto-toc {
 <td>Iowa</td>
 <td>Vanderbilt</td>
 <td>Vanderbilt</td>
-<td>Iowa<sup>*</sup></td>
 <td>Iowa</td>
-<td>Vanderbilt<sup>*</sup></td>
-<td>Vanderbilt</td>
-<td>Vanderbilt</td>
 <td>Iowa</td>
-<td>Vanderbilt<sup>*</sup></td>
 <td>Vanderbilt</td>
-<td>Vanderbilt</td>
-<td>Vanderbilt</td>
-<td>Iowa</td>
 <td>Vanderbilt</td>
 <td>Vanderbilt</td>
 <td>Iowa</td>
@@ -1319,10 +1311,18 @@ ul.auto-toc {
 <td>Vanderbilt</td>
 <td>Vanderbilt</td>
 <td>Vanderbilt</td>
+<td>Iowa</td>
+<td>Vanderbilt</td>
+<td>Vanderbilt</td>
+<td>Iowa</td>
 <td>Vanderbilt</td>
 <td>Vanderbilt</td>
 <td>Vanderbilt</td>
-<td>Vanderbilt<sup>*</sup></td>
+<td>Vanderbilt</td>
+<td>Vanderbilt</td>
+<td>Vanderbilt</td>
+<td>Vanderbilt</td>
+<td>Vanderbilt</td>
 <td>Iowa</td>
 <td>Vanderbilt</td>
 </tr>
@@ -1340,7 +1340,7 @@ ul.auto-toc {
 <td>Duke</td>
 <td>Duke</td>
 <td>Duke</td>
-<td>Duke<sup>*</sup></td>
+<td>Duke</td>
 <td>Arizona State</td>
 <td>Arizona State</td>
 <td>Arizona State</td>
@@ -1365,32 +1365,32 @@ ul.auto-toc {
 <td>Michigan</td>
 <td>7.5</td>
 <td>Texas</td>
-<td>Texas<sup>*</sup></td>
-<td>Texas<sup>*</sup></td>
-<td>Michigan</td>
-<td>Texas</td>
-<td>Michigan</td>
-<td>Texas<sup>*</sup></td>
-<td>Texas</td>
-<td>Michigan</td>
-<td>Michigan</td>
-<td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Michigan</td>
 <td>Texas</td>
-<td>Texas<sup>*</sup></td>
+<td>Michigan</td>
+<td>Texas</td>
+<td>Texas</td>
 <td>Michigan</td>
 <td>Michigan</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
+<td>Michigan</td>
+<td>Texas</td>
+<td>Texas</td>
+<td>Michigan</td>
+<td>Michigan</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
 <td>Texas</td>
-<td>Texas<sup>*</sup></td>
-<td>Texas<sup>*</sup></td>
+<td>Texas</td>
+<td>Texas</td>
+<td>Texas</td>
+<td>Texas</td>
+<td>Texas</td>
 </tr>
 <tr><td>30</td>
 <td>LAS VEGAS BOWL</td>
@@ -1399,28 +1399,28 @@ ul.auto-toc {
 <td>16.5</td>
 <td>Utah</td>
 <td>Utah</td>
-<td>Utah<sup>*</sup></td>
-<td>Nebraska<sup>*</sup></td>
-<td>Utah<sup>*</sup></td>
+<td>Utah</td>
 <td>Nebraska</td>
-<td>Utah<sup>*</sup></td>
-<td>Utah<sup>*</sup></td>
-<td>Nebraska<sup>*</sup></td>
 <td>Utah</td>
 <td>Nebraska</td>
 <td>Utah</td>
 <td>Utah</td>
 <td>Nebraska</td>
 <td>Utah</td>
-<td>Utah</td>
-<td>Nebraska<sup>*</sup></td>
-<td>Utah</td>
-<td>Utah<sup>*</sup></td>
+<td>Nebraska</td>
 <td>Utah</td>
 <td>Utah</td>
+<td>Nebraska</td>
 <td>Utah</td>
-<td>Utah<sup>*</sup></td>
-<td>Utah<sup>*</sup></td>
+<td>Utah</td>
+<td>Nebraska</td>
+<td>Utah</td>
+<td>Utah</td>
+<td>Utah</td>
+<td>Utah</td>
+<td>Utah</td>
+<td>Utah</td>
+<td>Utah</td>
 <td>Utah</td>
 <td>Nebraska</td>
 <td>Utah</td>
@@ -1428,129 +1428,129 @@ ul.auto-toc {
 <tr><td>31</td>
 <td>CFP Quarterfinal (Cotton)</td>
 <td>Ohio State</td>
-<td>ATM or Miami</td>
+<td>Miami</td>
 <td>0.0</td>
 <td>Ohio State</td>
 <td>Ohio State</td>
 <td>Ohio State</td>
-<td>ATM or Miami</td>
+<td>Miami</td>
 <td>Ohio State</td>
-<td>ATM or Miami</td>
-<td>Ohio State</td>
-<td>Ohio State</td>
-<td>Ohio State</td>
-<td>Ohio State</td>
-<td>ATM or Miami</td>
-<td>Ohio State</td>
-<td>Ohio State</td>
-<td>ATM or Miami</td>
-<td>Ohio State</td>
-<td>Ohio State</td>
-<td>ATM or Miami</td>
-<td>Ohio State</td>
-<td>Ohio State</td>
-<td>ATM or Miami</td>
+<td>Miami</td>
 <td>Ohio State</td>
 <td>Ohio State</td>
 <td>Ohio State</td>
 <td>Ohio State</td>
+<td>Texas A&amp;M</td>
 <td>Ohio State</td>
-<td>ATM or Miami</td>
+<td>Ohio State</td>
+<td>Miami</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Miami</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Texas A&amp;M</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Texas A&amp;M</td>
 <td>Ohio State</td>
 </tr>
 <tr><td>32</td>
 <td>CFP Quarterfinal (Orange)</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
+<td>Oregon</td>
 <td>0.0</td>
-<td>ORE or JM</td>
+<td>Oregon</td>
 <td>Texas Tech</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
+<td>James Madison</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
-<td>Texas Tech</td>
-<td>Texas Tech</td>
-<td>ORE or JM</td>
+<td>James Madison</td>
 <td>Texas Tech</td>
 <td>Texas Tech</td>
+<td>James Madison</td>
 <td>Texas Tech</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
 <td>Texas Tech</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
+<td>James Madison</td>
 <td>Texas Tech</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
+<td>James Madison</td>
 <td>Texas Tech</td>
-<td>ORE or JM</td>
-<td>ORE or JM</td>
-<td>ORE or JM</td>
-<td>ORE or JM</td>
+<td>Texas Tech</td>
+<td>Oregon</td>
+<td>Texas Tech</td>
+<td>Oregon</td>
+<td>Oregon</td>
+<td>Oregon</td>
+<td>Oregon</td>
 <td>Texas Tech</td>
 <td>Texas Tech</td>
 </tr>
 <tr><td>33</td>
 <td>CFP Quarterfinal (Rose)</td>
 <td>Indiana</td>
-<td>AL or OK</td>
+<td>Alabama</td>
 <td>0.0</td>
-<td>AL or OK</td>
+<td>Alabama</td>
 <td>Indiana</td>
 <td>Indiana</td>
-<td>AL or OK</td>
-<td>AL or OK</td>
+<td>Alabama</td>
+<td>Oklahoma</td>
 <td>Indiana</td>
-<td>AL or OK</td>
-<td>Indiana</td>
-<td>Indiana</td>
-<td>Indiana</td>
-<td>Indiana</td>
-<td>AL or OK</td>
-<td>Indiana</td>
-<td>AL or OK</td>
-<td>Indiana</td>
-<td>AL or OK</td>
-<td>AL or OK</td>
+<td>Oklahoma</td>
 <td>Indiana</td>
 <td>Indiana</td>
 <td>Indiana</td>
 <td>Indiana</td>
-<td>AL or OK</td>
-<td>AL or OK</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Oklahoma</td>
+<td>Alabama</td>
 <td>Indiana</td>
 <td>Indiana</td>
-<td>AL or OK</td>
+<td>Indiana</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Indiana</td>
+<td>Alabama</td>
 <td>Indiana</td>
 </tr>
 <tr><td>34</td>
 <td>CFP Quarterfinal (Sugar)</td>
 <td>Georgia</td>
-<td>Ole Miss or Tulane</td>
+<td>Ole Miss</td>
 <td>0.0</td>
 <td>Georgia</td>
 <td>Georgia</td>
 <td>Georgia</td>
-<td>Ole Miss or Tulane</td>
+<td>Tulane</td>
 <td>Georgia</td>
-<td>Ole Miss or Tulane</td>
-<td>Georgia</td>
-<td>Georgia</td>
-<td>Ole Miss or Tulane</td>
-<td>Georgia</td>
-<td>Ole Miss or Tulane</td>
+<td>Ole Miss</td>
 <td>Georgia</td>
 <td>Georgia</td>
-<td>Ole Miss or Tulane</td>
+<td>Tulane</td>
+<td>Georgia</td>
+<td>Ole Miss</td>
 <td>Georgia</td>
 <td>Georgia</td>
-<td>Ole Miss or Tulane</td>
+<td>Tulane</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Tulane</td>
 <td>Georgia</td>
 <td>Georgia</td>
 <td>Georgia</td>
-<td>Ole Miss or Tulane</td>
-<td>Ole Miss or Tulane</td>
+<td>Ole Miss</td>
+<td>Ole Miss</td>
 <td>Georgia</td>
 <td>Georgia</td>
 <td>Georgia</td>
@@ -1563,28 +1563,28 @@ ul.auto-toc {
 <td>Rice</td>
 <td>10.5</td>
 <td>Rice</td>
-<td>Texas State<sup>*</sup></td>
+<td>Texas State</td>
 <td>Texas State</td>
 <td>Rice</td>
-<td>Texas State<sup>*</sup></td>
-<td>Rice</td>
-<td>Texas State</td>
-<td>Texas State<sup>*</sup></td>
-<td>Rice<sup>*</sup></td>
-<td>Texas State<sup>*</sup></td>
-<td>Texas State</td>
-<td>Texas State</td>
 <td>Texas State</td>
 <td>Rice</td>
 <td>Texas State</td>
 <td>Texas State</td>
 <td>Rice</td>
-<td>Texas State<sup>*</sup></td>
 <td>Texas State</td>
 <td>Texas State</td>
 <td>Texas State</td>
 <td>Texas State</td>
-<td>Texas State<sup>*</sup></td>
+<td>Rice</td>
+<td>Texas State</td>
+<td>Texas State</td>
+<td>Rice</td>
+<td>Texas State</td>
+<td>Texas State</td>
+<td>Texas State</td>
+<td>Texas State</td>
+<td>Texas State</td>
+<td>Texas State</td>
 <td>Texas State</td>
 <td>Texas State</td>
 <td>Rice</td>
@@ -1618,7 +1618,7 @@ ul.auto-toc {
 <td>Cincinnati</td>
 <td>Navy</td>
 <td>Cincinnati</td>
-<td>Navy<sup>*</sup></td>
+<td>Navy</td>
 <td>Navy</td>
 <td>Cincinnati</td>
 <td>Cincinnati</td>
@@ -1628,7 +1628,20 @@ ul.auto-toc {
 <td>Mississippi State</td>
 <td>Wake Forest</td>
 <td>2.5</td>
-<td>Mississippi State<sup>*</sup></td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Wake Forest</td>
+<td>Mississippi State</td>
+<td>Wake Forest</td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Wake Forest</td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Mississippi State</td>
+<td>Wake Forest</td>
+<td>Wake Forest</td>
 <td>Mississippi State</td>
 <td>Mississippi State</td>
 <td>Wake Forest</td>
@@ -1636,19 +1649,6 @@ ul.auto-toc {
 <td>Wake Forest</td>
 <td>Mississippi State</td>
 <td>Mississippi State</td>
-<td>Wake Forest</td>
-<td>Mississippi State</td>
-<td>Mississippi State</td>
-<td>Mississippi State</td>
-<td>Wake Forest</td>
-<td>Wake Forest</td>
-<td>Mississippi State<sup>*</sup></td>
-<td>Mississippi State</td>
-<td>Wake Forest</td>
-<td>Mississippi State</td>
-<td>Wake Forest</td>
-<td>Mississippi State</td>
-<td>Mississippi State<sup>*</sup></td>
 <td>Mississippi State</td>
 <td>Mississippi State</td>
 <td>Wake Forest</td>
@@ -1694,99 +1694,99 @@ ul.auto-toc {
 <td>Ohio/ATM/Miami</td>
 <td>GA/Ole Miss/Tulane</td>
 <td>0.0</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
-<td>GA/Ole Miss/Tulane</td>
-<td>Ohio/ATM/Miami</td>
-<td>Ohio/ATM/Miami</td>
+<td>Georgia</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Tulane</td>
+<td>Ohio State</td>
+<td>Ole Miss</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Texas A&amp;M</td>
+<td>Georgia</td>
+<td>Ohio State</td>
+<td>Tulane</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Tulane</td>
+<td>Ohio State</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Georgia</td>
+<td>Texas A&amp;M</td>
+<td>Ohio State</td>
 </tr>
 <tr><td>40</td>
 <td>CFP Semifinal (Peach)</td>
 <td>Texas Tech/ORE/JM</td>
 <td>Indiana/AL/OK</td>
 <td>0.0</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Indiana/AL/OK</td>
-<td>Texas Tech/ORE/JM</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Indiana/AL/OK</td>
-<td>Texas Tech/ORE/JM</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Texas Tech</td>
+<td>Alabama</td>
+<td>Oklahoma</td>
+<td>James Madison</td>
+<td>Texas Tech</td>
+<td>Texas Tech</td>
+<td>James Madison</td>
+<td>Texas Tech</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>Texas Tech</td>
+<td>Alabama</td>
+<td>Texas Tech</td>
+<td>Oklahoma</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Indiana</td>
+<td>Indiana</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>Texas Tech</td>
 </tr>
 <tr><td>41</td>
 <td>NATIONAL CHAMPIONSHIP</td>
 <td>Winner of Peach Bowl</td>
 <td>Winner of Fiesta Bowl</td>
 <td>0.0</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Peach Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
-<td>Winner of Fiesta Bowl</td>
+<td>Georgia</td>
+<td>Indiana</td>
+<td>Texas Tech</td>
+<td>Tulane</td>
+<td>Oklahoma</td>
+<td>Ole Miss</td>
+<td>Ohio State</td>
+<td>Texas Tech</td>
+<td>Ohio State</td>
+<td>Texas Tech</td>
+<td>Indiana</td>
+<td>Georgia</td>
+<td>Ohio State</td>
+<td>Tulane</td>
+<td>Texas Tech</td>
+<td>Oklahoma</td>
+<td>Alabama</td>
+<td>Indiana</td>
+<td>Georgia</td>
+<td>Georgia</td>
+<td>Indiana</td>
+<td>Alabama</td>
+<td>Ohio State</td>
+<td>Ohio State</td>
+<td>Georgia</td>
+<td>Texas A&amp;M</td>
+<td>Ohio State</td>
 </tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
