--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 09:06:11</em></div>
-<div class="line"><em>Last bowl scored:  FIRST RESPONDER BOWL (UTSA vs. Florida International)</em></div>
+<div class="line"><em>Last updated:  2025-12-27 15:04:58</em></div>
+<div class="line"><em>Last bowl scored:  PINSTRIPE BOWL (Clemson vs. Penn State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Vibe-free since '73 18.75</strong></div>
-<div class="line">2. <strong>Bearly Watching 18.25</strong></div>
-<div class="line">3. <strong>Battered Austin Syndrome 17.5</strong></div>
-<div class="line">4. Eclipse 17.25</div>
-<div class="line">4. We Pay Players 17.25</div>
-<div class="line">6. Mama Dawg 16.75</div>
-<div class="line">7. Down 16.5</div>
-<div class="line">8. Dazed and Confoosballed 15.25</div>
-<div class="line">8. Sherrone Moore's Bad Day 15.25</div>
-<div class="line">10. #MamaBear 15.0</div>
-<div class="line">11. Barkside Ballers 14.25</div>
-<div class="line">11. Upside 14.25</div>
-<div class="line">13. Wisconsin shoud've been here 13.75</div>
-<div class="line">14. Just Call Me Dr. 13.5</div>
-<div class="line">15. First Round SIL 13.25</div>
-<div class="line">16. bugaroo 13.0</div>
-<div class="line">17. Sierra LeCat Dowdle 12.25</div>
-<div class="line">18. Game of Throws 12.0</div>
-<div class="line">19. BlueOrRed 11.5</div>
-<div class="line">20. Momma Longhorn 11.25</div>
-<div class="line">20. Not So New Guy 11.25</div>
-<div class="line">22. Arandas legacy Year 11.0</div>
-<div class="line">23. Sascha Picks Dogs 10.25</div>
-<div class="line">23. NoNND-Bo 1 10.25</div>
-<div class="line">23. NoNND-Bo 2 10.25</div>
-<div class="line">26. Call Me An Optimist 9.25</div>
+<div class="line">1. <strong>Battered Austin Syndrome 19.0</strong></div>
+<div class="line">2. <strong>Vibe-free since '73 18.75</strong></div>
+<div class="line">2. <strong>We Pay Players 18.75</strong></div>
+<div class="line">4. Sherrone Moore's Bad Day 18.25</div>
+<div class="line">4. Bearly Watching 18.25</div>
+<div class="line">6. Eclipse 17.25</div>
+<div class="line">7. Dazed and Confoosballed 16.75</div>
+<div class="line">7. Mama Dawg 16.75</div>
+<div class="line">9. Down 16.5</div>
+<div class="line">10. Upside 15.75</div>
+<div class="line">11. Sierra LeCat Dowdle 15.25</div>
+<div class="line">12. #MamaBear 15.0</div>
+<div class="line">12. Just Call Me Dr. 15.0</div>
+<div class="line">14. First Round SIL 14.75</div>
+<div class="line">15. BlueOrRed 14.5</div>
+<div class="line">16. Barkside Ballers 14.25</div>
+<div class="line">17. Wisconsin shoud've been here 13.75</div>
+<div class="line">18. Sascha Picks Dogs 13.25</div>
+<div class="line">18. NoNND-Bo 2 13.25</div>
+<div class="line">20. bugaroo 13.0</div>
+<div class="line">21. Not So New Guy 12.75</div>
+<div class="line">22. Arandas legacy Year 12.5</div>
+<div class="line">23. Call Me An Optimist 12.25</div>
+<div class="line">24. Game of Throws 12.0</div>
+<div class="line">25. NoNND-Bo 1 11.75</div>
+<div class="line">26. Momma Longhorn 11.25</div>
 <div class="line">27. <strong>The New Mendoza Line 8.0</strong></div>
 </div>
 </div>
