--- a/bowl_pool/test/2025-2026/rankings.html
+++ b/bowl_pool/test/2025-2026/rankings.html
@@ -365,22 +365,22 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 09:04:57</em></div>
+<div class="line"><em>Last updated:  2025-12-27 14:53:40</em></div>
 <div class="line"><em>Last bowl scored:  FIRST RESPONDER BOWL (UTSA vs. Florida International)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Vibe-free since '73 18.75</strong></div>
 <div class="line">2. <strong>Bearly Watching 18.25</strong></div>
 <div class="line">3. <strong>Battered Austin Syndrome 17.5</strong></div>
-<div class="line">4. Eclipse 17.25</div>
+<div class="line">4. <strong>Eclipse 17.25</strong></div>
 <div class="line">4. We Pay Players 17.25</div>
 <div class="line">6. Mama Dawg 16.75</div>
 <div class="line">7. Down 16.5</div>
 <div class="line">8. Dazed and Confoosballed 15.25</div>
-<div class="line">8. <strong>Sherrone Moore's Bad Day 15.25</strong></div>
+<div class="line">8. Sherrone Moore's Bad Day 15.25</div>
 <div class="line">10. #MamaBear 15.0</div>
 <div class="line">11. Barkside Ballers 14.25</div>
-<div class="line">11. Upside 14.25</div>
+<div class="line">11. <strong>Upside 14.25</strong></div>
 <div class="line">13. Wisconsin shoud've been here 13.75</div>
 <div class="line">14. Just Call Me Dr. 13.5</div>
 <div class="line">15. First Round SIL 13.25</div>
@@ -391,10 +391,10 @@ ul.auto-toc {
 <div class="line">20. Momma Longhorn 11.25</div>
 <div class="line">20. Not So New Guy 11.25</div>
 <div class="line">22. Arandas legacy Year 11.0</div>
-<div class="line">23. Sascha Picks Dogs 10.25</div>
+<div class="line">23. <strong>Sascha Picks Dogs 10.25</strong></div>
 <div class="line">23. NoNND-Bo 1 10.25</div>
-<div class="line">23. NoNND-Bo 2 10.25</div>
-<div class="line">26. Call Me An Optimist 9.25</div>
+<div class="line">23. <strong>NoNND-Bo 2 10.25</strong></div>
+<div class="line">26. <strong>Call Me An Optimist 9.25</strong></div>
 <div class="line">27. <strong>The New Mendoza Line 8.0</strong></div>
 </div>
 </div>
