--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -897,6 +897,72 @@ ul.auto-toc {
 <td>0.0</td>
 <td>2.0<sup>*</sup></td>
 </tr>
+<tr><td>15</td>
+<td>MILITARY BOWL</td>
+<td>Pittsburgh</td>
+<td>East Carolina</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>16</td>
+<td>PINSTRIPE BOWL</td>
+<td>Clemson</td>
+<td>Penn State</td>
+<td>4.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1003,30 +1069,30 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td><strong>14.25</strong></td>
 <td><strong>18.75</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>10.25</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>13.25</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>15.25</strong></td>
+<td><strong>18.25</strong></td>
 <td><strong>11.25</strong></td>
 <td><strong>13.0</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>11.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>12.5</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>10.25</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>13.25</strong></td>
 <td><strong>13.75</strong></td>
 <td><strong>18.25</strong></td>
-<td><strong>9.25</strong></td>
+<td><strong>12.25</strong></td>
 <td><strong>16.5</strong></td>
 <td><strong>17.25</strong></td>
-<td><strong>13.25</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>11.5</strong></td>
-<td><strong>13.5</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>14.5</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>12.0</strong></td>
 </tr>
 </tbody>
