--- a/bowl_pool/2025-2026_CFP/rankings.html
+++ b/bowl_pool/2025-2026_CFP/rankings.html
@@ -365,7 +365,7 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 15:04:57</em></div>
+<div class="line"><em>Last updated:  2025-12-27 21:25:52</em></div>
 <div class="line"><em>Last bowl scored:  CFP First Round (Oregon vs. James Madison)</em></div>
 </div>
 <div class="line-block">
@@ -374,7 +374,7 @@ ul.auto-toc {
 <div class="line">3. <strong>Vibe-free since '73 9.5</strong></div>
 <div class="line">4. Mama Dawg 8.5</div>
 <div class="line">4. Bearly Watching 8.5</div>
-<div class="line">6. <strong>We Pay Players 8.0</strong></div>
+<div class="line">6. We Pay Players 8.0</div>
 <div class="line">7. Sherrone Moore's Bad Day 7.5</div>
 <div class="line">8. bugaroo 7.0</div>
 <div class="line">8. Eclipse 7.0</div>
@@ -384,7 +384,7 @@ ul.auto-toc {
 <div class="line">12. Sascha Picks Dogs 6.5</div>
 <div class="line">12. NoNND-Bo 2 6.5</div>
 <div class="line">12. Wisconsin shoud've been here 6.5</div>
-<div class="line">16. Dazed and Confoosballed 6.0</div>
+<div class="line">16. <strong>Dazed and Confoosballed 6.0</strong></div>
 <div class="line">16. Momma Longhorn 6.0</div>
 <div class="line">16. First Round SIL 6.0</div>
 <div class="line">16. BlueOrRed 6.0</div>
