--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 15:04:56</em></div>
-<div class="line"><em>Last bowl scored:  PINSTRIPE BOWL (Clemson vs. Penn State)</em></div>
+<div class="line"><em>Last updated:  2025-12-27 21:25:51</em></div>
+<div class="line"><em>Last bowl scored:  NEW MEXICO BOWL (North Texas vs. San Diego State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Upside 11.75</div>
-<div class="line">2. Dazed and Confoosballed 10.75</div>
-<div class="line">2. Sherrone Moore's Bad Day 10.75</div>
-<div class="line">2. <strong>We Pay Players 10.75</strong></div>
-<div class="line">5. Eclipse 10.25</div>
-<div class="line">6. Sierra LeCat Dowdle 9.75</div>
-<div class="line">6. Bearly Watching 9.75</div>
-<div class="line">8. <strong>Vibe-free since '73 9.25</strong></div>
-<div class="line">9. First Round SIL 8.75</div>
-<div class="line">9. Not So New Guy 8.75</div>
-<div class="line">11. Arandas legacy Year 8.5</div>
-<div class="line">11. BlueOrRed 8.5</div>
-<div class="line">13. Mama Dawg 8.25</div>
-<div class="line">14. #MamaBear 8.0</div>
-<div class="line">14. Just Call Me Dr. 8.0</div>
-<div class="line">14. Game of Throws 8.0</div>
-<div class="line">17. Barkside Ballers 7.75</div>
-<div class="line">17. NoNND-Bo 1 7.75</div>
-<div class="line">19. <strong>Battered Austin Syndrome 7.5</strong></div>
-<div class="line">20. Wisconsin shoud've been here 7.25</div>
-<div class="line">21. Sascha Picks Dogs 6.75</div>
-<div class="line">21. NoNND-Bo 2 6.75</div>
-<div class="line">21. Call Me An Optimist 6.75</div>
-<div class="line">24. bugaroo 6.0</div>
-<div class="line">24. Down 6.0</div>
-<div class="line">26. Momma Longhorn 5.25</div>
-<div class="line">27. <strong>The New Mendoza Line 5.0</strong></div>
+<div class="line">1. <strong>Dazed and Confoosballed 14.75</strong></div>
+<div class="line">1. Upside 14.75</div>
+<div class="line">3. Eclipse 14.25</div>
+<div class="line">4. Sherrone Moore's Bad Day 13.75</div>
+<div class="line">5. Arandas legacy Year 13.5</div>
+<div class="line">6. <strong>Vibe-free since '73 13.25</strong></div>
+<div class="line">7. Barkside Ballers 12.75</div>
+<div class="line">8. Game of Throws 12.0</div>
+<div class="line">9. Bearly Watching 11.75</div>
+<div class="line">9. First Round SIL 11.75</div>
+<div class="line">9. Not So New Guy 11.75</div>
+<div class="line">9. We Pay Players 11.75</div>
+<div class="line">13. Mama Dawg 11.25</div>
+<div class="line">14. #MamaBear 11.0</div>
+<div class="line">14. Just Call Me Dr. 11.0</div>
+<div class="line">16. NoNND-Bo 1 10.75</div>
+<div class="line">17. <strong>Battered Austin Syndrome 10.5</strong></div>
+<div class="line">18. Wisconsin shoud've been here 10.25</div>
+<div class="line">19. Sierra LeCat Dowdle 9.75</div>
+<div class="line">20. BlueOrRed 9.5</div>
+<div class="line">21. Down 9.0</div>
+<div class="line">22. bugaroo 8.0</div>
+<div class="line">23. Momma Longhorn 7.25</div>
+<div class="line">24. <strong>The New Mendoza Line 7.0</strong></div>
+<div class="line">25. Sascha Picks Dogs 6.75</div>
+<div class="line">25. NoNND-Bo 2 6.75</div>
+<div class="line">25. Call Me An Optimist 6.75</div>
 </div>
 </div>
 </body>
