--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -963,6 +963,138 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>17</td>
+<td>FENWAY BOWL</td>
+<td>Army</td>
+<td>Uconn</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>18</td>
+<td>SNOOP DOG ARIZONA BOWL</td>
+<td>Fresno State</td>
+<td>Miami (OH)</td>
+<td>3.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>19</td>
+<td>POP-TARTS BOWL</td>
+<td>BYU</td>
+<td>Georgia Tech</td>
+<td>4.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>20</td>
+<td>NEW MEXICO BOWL</td>
+<td>North Texas</td>
+<td>San Diego State</td>
+<td>3.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1067,33 +1199,33 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>14.25</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>20.75</strong></td>
 <td><strong>13.25</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>13.0</strong></td>
+<td><strong>10.0</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>15.0</strong></td>
 <td><strong>15.25</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>12.25</strong></td>
-<td><strong>16.5</strong></td>
-<td><strong>17.25</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>17.5</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>14.5</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>12.75</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>12.25</strong></td>
+<td><strong>19.5</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>18.0</strong></td>
 <td><strong>15.75</strong></td>
 <td><strong>18.75</strong></td>
-<td><strong>12.0</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>16.0</strong></td>
 </tr>
 </tbody>
 </table>
