--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -831,38 +831,170 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>13</td>
+<td>FENWAY BOWL</td>
+<td>Army</td>
+<td>Uconn</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>14</td>
+<td>SNOOP DOG ARIZONA BOWL</td>
+<td>Fresno State</td>
+<td>Miami (OH)</td>
+<td>3.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>15</td>
+<td>POP-TARTS BOWL</td>
+<td>BYU</td>
+<td>Georgia Tech</td>
+<td>4.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>16</td>
+<td>NEW MEXICO BOWL</td>
+<td>North Texas</td>
+<td>San Diego State</td>
+<td>3.5</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>7.75</strong></td>
-<td><strong>9.25</strong></td>
-<td><strong>10.75</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>6.75</strong></td>
-<td><strong>5.0</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>5.25</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>7.5</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>8.25</strong></td>
-<td><strong>7.75</strong></td>
-<td><strong>6.75</strong></td>
+<td><strong>7.0</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>7.25</strong></td>
+<td><strong>8.0</strong></td>
 <td><strong>9.75</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>6.0</strong></td>
-<td><strong>10.25</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>8.5</strong></td>
-<td><strong>8.0</strong></td>
-<td><strong>8.75</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>10.5</strong></td>
+<td><strong>13.5</strong></td>
+<td><strong>11.25</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>6.75</strong></td>
+<td><strong>10.25</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>6.75</strong></td>
+<td><strong>9.0</strong></td>
+<td><strong>14.25</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>9.5</strong></td>
+<td><strong>11.0</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>14.75</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>12.0</strong></td>
 </tr>
 </tbody>
 </table>
