--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 21:25:53</em></div>
-<div class="line"><em>Last bowl scored:  NEW MEXICO BOWL (North Texas vs. San Diego State)</em></div>
+<div class="line"><em>Last updated:  2025-12-27 22:52:23</em></div>
+<div class="line"><em>Last bowl scored:  GATOR BOWL (Missouri vs. Virginia)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Vibe-free since '73 22.75</strong></div>
-<div class="line">2. <strong>Battered Austin Syndrome 22.0</strong></div>
-<div class="line">3. Sherrone Moore's Bad Day 21.25</div>
-<div class="line">3. Eclipse 21.25</div>
+<div class="line">1. <strong>Battered Austin Syndrome 23.5</strong></div>
+<div class="line">2. <strong>Vibe-free since '73 22.75</strong></div>
+<div class="line">2. Sherrone Moore's Bad Day 22.75</div>
+<div class="line">4. Eclipse 21.25</div>
 <div class="line">5. <strong>Dazed and Confoosballed 20.75</strong></div>
 <div class="line">6. Bearly Watching 20.25</div>
 <div class="line">7. Mama Dawg 19.75</div>
 <div class="line">7. We Pay Players 19.75</div>
 <div class="line">9. Down 19.5</div>
 <div class="line">10. Barkside Ballers 19.25</div>
-<div class="line">11. Upside 18.75</div>
-<div class="line">12. #MamaBear 18.0</div>
-<div class="line">12. Just Call Me Dr. 18.0</div>
-<div class="line">14. First Round SIL 17.75</div>
-<div class="line">15. Arandas legacy Year 17.5</div>
-<div class="line">16. Wisconsin shoud've been here 16.75</div>
-<div class="line">17. Game of Throws 16.0</div>
-<div class="line">18. Not So New Guy 15.75</div>
-<div class="line">19. BlueOrRed 15.5</div>
-<div class="line">20. Sierra LeCat Dowdle 15.25</div>
-<div class="line">21. bugaroo 15.0</div>
-<div class="line">22. NoNND-Bo 1 14.75</div>
-<div class="line">23. Sascha Picks Dogs 13.25</div>
-<div class="line">23. Momma Longhorn 13.25</div>
-<div class="line">23. NoNND-Bo 2 13.25</div>
-<div class="line">26. Call Me An Optimist 12.25</div>
+<div class="line">11. Arandas legacy Year 19.0</div>
+<div class="line">12. Upside 18.75</div>
+<div class="line">13. Wisconsin shoud've been here 18.25</div>
+<div class="line">14. #MamaBear 18.0</div>
+<div class="line">14. BlueOrRed 18.0</div>
+<div class="line">14. Just Call Me Dr. 18.0</div>
+<div class="line">17. First Round SIL 17.75</div>
+<div class="line">18. Sierra LeCat Dowdle 16.75</div>
+<div class="line">19. Game of Throws 16.0</div>
+<div class="line">20. NoNND-Bo 2 15.75</div>
+<div class="line">20. Not So New Guy 15.75</div>
+<div class="line">22. bugaroo 15.0</div>
+<div class="line">23. Sascha Picks Dogs 14.75</div>
+<div class="line">23. Momma Longhorn 14.75</div>
+<div class="line">23. NoNND-Bo 1 14.75</div>
+<div class="line">26. Call Me An Optimist 13.75</div>
 <div class="line">27. <strong>The New Mendoza Line 10.0</strong></div>
 </div>
 </div>
