--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 21:25:51</em></div>
-<div class="line"><em>Last bowl scored:  NEW MEXICO BOWL (North Texas vs. San Diego State)</em></div>
+<div class="line"><em>Last updated:  2025-12-27 22:52:20</em></div>
+<div class="line"><em>Last bowl scored:  GATOR BOWL (Missouri vs. Virginia)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Dazed and Confoosballed 14.75</strong></div>
-<div class="line">1. Upside 14.75</div>
-<div class="line">3. Eclipse 14.25</div>
-<div class="line">4. Sherrone Moore's Bad Day 13.75</div>
-<div class="line">5. Arandas legacy Year 13.5</div>
+<div class="line">1. Sherrone Moore's Bad Day 15.25</div>
+<div class="line">2. Arandas legacy Year 15.0</div>
+<div class="line">3. <strong>Dazed and Confoosballed 14.75</strong></div>
+<div class="line">3. Upside 14.75</div>
+<div class="line">5. Eclipse 14.25</div>
 <div class="line">6. <strong>Vibe-free since '73 13.25</strong></div>
 <div class="line">7. Barkside Ballers 12.75</div>
+<div class="line">8. <strong>Battered Austin Syndrome 12.0</strong></div>
+<div class="line">8. BlueOrRed 12.0</div>
 <div class="line">8. Game of Throws 12.0</div>
-<div class="line">9. Bearly Watching 11.75</div>
-<div class="line">9. First Round SIL 11.75</div>
-<div class="line">9. Not So New Guy 11.75</div>
-<div class="line">9. We Pay Players 11.75</div>
-<div class="line">13. Mama Dawg 11.25</div>
-<div class="line">14. #MamaBear 11.0</div>
-<div class="line">14. Just Call Me Dr. 11.0</div>
-<div class="line">16. NoNND-Bo 1 10.75</div>
-<div class="line">17. <strong>Battered Austin Syndrome 10.5</strong></div>
-<div class="line">18. Wisconsin shoud've been here 10.25</div>
-<div class="line">19. Sierra LeCat Dowdle 9.75</div>
-<div class="line">20. BlueOrRed 9.5</div>
-<div class="line">21. Down 9.0</div>
-<div class="line">22. bugaroo 8.0</div>
-<div class="line">23. Momma Longhorn 7.25</div>
-<div class="line">24. <strong>The New Mendoza Line 7.0</strong></div>
-<div class="line">25. Sascha Picks Dogs 6.75</div>
-<div class="line">25. NoNND-Bo 2 6.75</div>
-<div class="line">25. Call Me An Optimist 6.75</div>
+<div class="line">11. Wisconsin shoud've been here 11.75</div>
+<div class="line">11. Bearly Watching 11.75</div>
+<div class="line">11. First Round SIL 11.75</div>
+<div class="line">11. Not So New Guy 11.75</div>
+<div class="line">11. We Pay Players 11.75</div>
+<div class="line">16. Sierra LeCat Dowdle 11.25</div>
+<div class="line">16. Mama Dawg 11.25</div>
+<div class="line">18. #MamaBear 11.0</div>
+<div class="line">18. Just Call Me Dr. 11.0</div>
+<div class="line">20. NoNND-Bo 1 10.75</div>
+<div class="line">21. NoNND-Bo 2 9.25</div>
+<div class="line">22. Down 9.0</div>
+<div class="line">23. Momma Longhorn 8.75</div>
+<div class="line">24. Sascha Picks Dogs 8.25</div>
+<div class="line">24. Call Me An Optimist 8.25</div>
+<div class="line">26. bugaroo 8.0</div>
+<div class="line">27. <strong>The New Mendoza Line 7.0</strong></div>
 </div>
 </div>
 </body>
