--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1095,6 +1095,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>21</td>
+<td>GATOR BOWL</td>
+<td>Missouri</td>
+<td>Virginia</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1202,25 +1235,25 @@ ul.auto-toc {
 <td><strong>19.25</strong></td>
 <td><strong>22.75</strong></td>
 <td><strong>20.75</strong></td>
-<td><strong>13.25</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>13.25</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>15.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>17.5</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>19.0</strong></td>
 <td><strong>19.75</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>13.25</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>18.25</strong></td>
 <td><strong>20.25</strong></td>
-<td><strong>12.25</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>19.5</strong></td>
 <td><strong>21.25</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>18.0</strong></td>
-<td><strong>15.5</strong></td>
+<td><strong>18.0</strong></td>
 <td><strong>18.0</strong></td>
 <td><strong>15.75</strong></td>
 <td><strong>18.75</strong></td>
