--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -963,6 +963,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>17</td>
+<td>GATOR BOWL</td>
+<td>Missouri</td>
+<td>Virginia</td>
+<td>6.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
@@ -971,25 +1004,25 @@ ul.auto-toc {
 <td><strong>12.75</strong></td>
 <td><strong>13.25</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>6.75</strong></td>
+<td><strong>8.25</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>7.25</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>8.75</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>9.75</strong></td>
-<td><strong>10.5</strong></td>
-<td><strong>13.5</strong></td>
+<td><strong>11.25</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>15.0</strong></td>
 <td><strong>11.25</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>6.75</strong></td>
-<td><strong>10.25</strong></td>
+<td><strong>9.25</strong></td>
 <td><strong>11.75</strong></td>
-<td><strong>6.75</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>8.25</strong></td>
 <td><strong>9.0</strong></td>
 <td><strong>14.25</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>11.0</strong></td>
-<td><strong>9.5</strong></td>
+<td><strong>12.0</strong></td>
 <td><strong>11.0</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>14.75</strong></td>
